// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a basic button 1`] = `
<button
  className="cjBPpq btn"
  disabled={false}
  type="button"
>
  Basic Button
</button>
`;

exports[`renders a danger button 1`] = `
<button
  className="cjBPpq btn btn-danger"
  disabled={false}
  type="button"
>
  Basic Button
</button>
`;

exports[`renders a info button 1`] = `
<button
  className="cjBPpq btn btn-info"
  disabled={false}
  type="button"
>
  Basic Button
</button>
`;

exports[`renders a link button 1`] = `
<button
  className="cjBPpq btn btn-link"
  disabled={false}
  type="button"
>
  Basic Button
</button>
`;

exports[`renders a primary button 1`] = `
<button
  className="cjBPpq btn btn-primary"
  disabled={false}
  type="button"
>
  Basic Button
</button>
`;

exports[`renders a success button 1`] = `
<button
  className="cjBPpq btn btn-success"
  disabled={false}
  type="button"
>
  Basic Button
</button>
`;

exports[`renders a warning button 1`] = `
<button
  className="cjBPpq btn btn-warning"
  disabled={false}
  type="button"
>
  Basic Button
</button>
`;
